<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_add_contact">Add</string>
    <string name="action_add_contact">Add contact</string>
    <string name="text_view_no_contacts">No contacts added yet.</string>
    <string name="title_activity_add_contact">Add new contact</string>
    <string name="edit_text_first_name_hint">First Name</string>
    <string name="edit_text_last_name_hint">Last Name</string>
    <string name="edit_text_nickname_hint">Nickname (optional)</string>
    <string name="button_done">Done</string>
    <string name="title_activity_edit_contact">Edit contact</string>
    <string name="message_contact_added">The contact has been added correctly.</string>
    <string name="button_delete">Delete contact</string>

</resources>
